Update modal styles with comments

--- a/styles.css
+++ b/styles.css
@@ -186,16 +186,15 @@ body {
 /* Remove default dialog styles */
 dialog {
   position: fixed;
-
   border: none;
   padding: 0;
   margin: 0;
   background: none;
 }
 
-/* Style the modal box */
+/* Style the modal background */
 #task-modal::backdrop {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.5);
 }
 
 #task-modal {
@@ -207,8 +206,7 @@ dialog {
   max-width: 600px;
   padding: 24px;
   background-color: #fff;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-  /*font-family: "Plus Jakarta Sans", sans-serif;*/
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
 }
 
 /* Header */
@@ -232,7 +230,7 @@ dialog {
   cursor: pointer;
   color: #ea5555;
   transition: transform 0.2s ease-in-out, font-weight 0.2s ease-in-out;
-  transition-delay: 0.1s; /* Delay before scaling */
+  transition-delay: 0.05s; /* Delay before scaling */
 }
 
 #close-btn:hover {
@@ -263,7 +261,7 @@ form select {
   border-radius: 4px;
   font-family: inherit;
   font-size: 0.8125em;
-  resize: vertical;
+  resize: vertical; /* Limits description inputs to only resize vertically (not horizontally) */
 }
 
 form select {
@@ -273,6 +271,7 @@ form select {
 
   background-size: 1.4rem;
   padding-right: 1rem;
+  cursor: pointer;
 }
 
 /* =========== Responsive styles =========== */
